--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="card">
         <div class="img-name-div">
-            <img class="user-icon" src="/Frontend Mentore-responsive-path/third-challange/img/image-daniel.jpg" alt="">
+            <img class="user-icon" src="img/image-daniel.jpg" alt="">
             <div class="name-div">
                 <p class="name">Daniel Clifford</p>
                 <p class="experience">Verified Graduate</p>
@@ -33,7 +33,7 @@
     </div>
     <div class="card" >
         <div class="img-name-div">
-            <img class="user-icon" src="/Frontend Mentore-responsive-path/third-challange/img/image-jonathan.jpg" alt="">
+            <img class="user-icon" src="/img/image-jonathan.jpg" alt="">
             <div class="name-div">
                 <p class="name">Jonathan Walters</p>
                 <p  class="experience">Verified Graduate</p>
@@ -48,7 +48,7 @@
     </div>
     <div class="card">
             <div class="img-name-div">
-                <img class="user-icon" src="/Frontend Mentore-responsive-path/third-challange/img/image-jeanette.jpg" alt="">
+                <img class="user-icon" src"/img/image-jeanette.jpg" alt="">
                 <div class="name-div">
                     <p class="name"  style="color:var(--mid-Grey);">Jeanette Harmon</p>
                     <p  class="experience" style="color:var(--mid-Grey);">Verified Graduate</p>
@@ -63,7 +63,7 @@
     </div>
     <div class="card">
         <div class="img-name-div">
-            <img class="user-icon" src="/Frontend Mentore-responsive-path/third-challange/img/image-patrick.jpg" alt="">
+            <img class="user-icon" src="/img/image-patrick.jpg" alt="">
             <div class="name-div">
                 <p class="name" >Patrick Abrams</p>
                 <p  class="experience">Verified Graduate</p>
@@ -77,7 +77,7 @@
     </div>
     <div class="card">
         <div class="img-name-div">
-            <img class="user-icon" src="/Frontend Mentore-responsive-path/third-challange/img/image-kira.jpg" alt="">
+            <img class="user-icon" src="/img/image-kira.jpg" alt="">
             <div class="name-div">
                 <p class="name"  style="color:var(--mid-Grey);">Kira Whittle</p>
                 <p  class="experience" style="color:var(--mid-Grey);">Verified Graduate</p>
@@ -91,4 +91,5 @@
     </div>
 </div>
 </body>
+
 </html>
